--- a/server/views/showLocations.hbs
+++ b/server/views/showLocations.hbs
@@ -1,6 +1,7 @@
 {{> locationsNav}}
 
 <h2>locations:</h2>
+<a class="nav" href="/locations/add/{{location}}">add location</a>
 
 <ul class="cards">
   {{#each locations}}
